2002-06-28  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* configure.in, configure, src/Makefile.in: Adjust for various
	removed (unused) files.

	* src/*.cpp: Adjust all ReadFile methods to use const char* title.
	
2002-06-11  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/Makefile.in: Add proper commandline for new bin2hex for
	PhModelData. Remove smarts.* from file lists.

	* src/Vector.cpp: Import changes contributed by Open
	Eye--improvements in random vector and matrix methods.

	* src/*.h: Improve top comment to refer to Open Babel and update
	copyright dates. Add uniform #ifdef symbols to prevent clashing
	with external header files.

	* src/alchemy.cpp, src/atom.cpp, src/balst.cpp, src/chains.cpp:
	Updates to cut down on buffer overflows, to begin addressing
	PR#565413.

	* src/data.cpp: Make OBExtensionTable types uniform. Make sure
	\0 is inserted in the proper place in the buffer when reading from
	the dataptr in OBGlobalDataBase::Init(). Fixes PR#567420.

	* src/fileformat.cpp: Use updated io_type declarations.

	* src/types.txt: Reformat to remove trailing whitespace and make
	spacing uniform. (Attempt to minimize problems with reading using
	OBTypeTable.)

	* src/obutil.[h,cpp]: Remove SmartsLexReplace, which is now
	migrated to parsmart.[h,cpp].

	* src/parsmart.[h,cpp]: Updated version from code contributed by
	Open Eye. Includes caching and RestrictedMatch method and seems to
	solve memory leak problems in older version. Solves PR#536943 and
	#564096. Includes code from smarts.* files.
	
	* src/phmodel.cpp: Update to work with new SMARTS parser.

2002-06-07  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* Makefile.in: Make sure directories are properly created on "make
	install" which fixes PR#565412.

	* src/Makefile.in: Add support for rebuilding the binary data
	headers when needed. Also generates library first, then just links
	this into main.o for the program. Also as above.
