@@ -36,7 +36,44 @@ class OBRTree
   int  GetAtomIdx();
   void PathToRoot(std::vector<OBNodeBase*>&);
 };
-
+/** Ring class
+*
+* Ring information beyond atom and bond membership is usually
+* not necessary, but more information can be had about the rings
+* in a molecule. The OBRing class is used to store the information
+* from a Smallest Set of Smallest Rings (SSSR) perception of a molecule.
+* The OBMol member function GetSSSR() stores the information it perceives
+* in a vector<OBRing*> inside the molecule. Perception is only done once
+* for a molecule unless the connection table is modified. The following
+* code demonstrates how to extract the SSSR information:
+\code
+   OEMol mol(SDF,SDF);
+   cin >> mol;
+   vector<OERing*> vr;
+   vr = mol.GetSSSR();
+\endcode
+* OBRing store the atom numbers of the atoms in each of the smallest
+* set of smallest rings in both a vector<int> and an OBBitVec.
+* An example of how to print out the atom numbers present in all SSSR
+* rings is show below.
+\code
+   vector<OERing*>::iterator i;
+   vector<int>::iterator j;
+   vector<OERing*> *rlist = (vector<OERing*>*)mol.GetData("RingList");
+   for (i = rlist->begin();i != rlist->end();i++)
+   {
+       for(j = (*i)->_path.begin();j != (*i)->_path.end();j++)
+           cout << *j << ` `;
+          cout << endl;
+   }
+\endcode
+ * will produce something like the following output for benzene
+\code
+   1 2 3 4 5 6
+\endcode
+* Ring information is automatically deleted from an OBMol when it
+* goes out of scope or the Clear() member function is called.
+*/
 class OBRing
 {
   OBMol *_parent;
